# QPyth

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  server.py
.github/workflows/: ci.yml
quantumpytho/: __init__.py  __main__.py  config.py  engine.py  menu.py
quantumpytho/modules/: __init__.py  bloch_ascii.py  circuit_explorer.py  decoherence_toggle.py  qrng_sacred.py  teleport_bridge.py  vqe_h2_ascii.py  vqe_h2_cli.py  vqe_h2_exact.py
tests/: test_smoke.py
web/: README.md  index.html  package.json  vite.config.ts
web/src/: App.tsx  index.css
web/src/components/: BlochView.tsx  CircuitsView.tsx  QRNGView.tsx  VQEView.tsx
