[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantumpytho-app"
version = "0.1.0"
description = "QuantumPytho – modular quantum Python app (QRNG, Bloch ASCII, VQE, teleportation)"
authors = [{ name = "Your Name", email = "you@example.com" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"

dependencies = [
  "qiskit>=1.0.0",
  "qiskit-aer>=0.13.0",
  "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "ruff>=0.6.0",
  "pre-commit>=3.7.0",
]
web = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
]

[project.urls]
Homepage = "https://github.com/quantumdynamics927-dotcom/QPyth"
Repository = "https://github.com/quantumdynamics927-dotcom/QPyth"
Issues = "https://github.com/quantumdynamics927-dotcom/QPyth/issues"

[project.scripts]
qpy = "quantumpytho.menu:run_app"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
